--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 # ----------------------- #
 
 url: http://www.dcassol.com
-title: Daniela Cassol
-email: danicassol@gmail.com
-author: Daniela Cassol
-description: "Daniela's Personal Page"
+title: André Pesati Revoredo
+email: pesatirevoredo@gmail.com
+author: André Pesati Revoredo
+description: "Andre Personal Page"
 
 # ----------------------- #
 #    Jekyll & Plugins     #
@@ -26,13 +26,13 @@ plugins:
 social:
   - icon: github
     title: github
-    url: https://github.com/dcassol  
+    url: https://github.com/Pesati 
   - icon: envelope-o
     title: email
-    url: mailto:danicassol@gmail.com
+    url: mailto:pesatirevoredo@gmail.com
   - icon: linkedin
     title: linkedin
-    url: https://www.linkedin.com/in/dcassol/
+    url: https://www.linkedin.com/in/andrepesati/
 #  - icon: file-pdf-o
 #    title: CV
 #    url: img/CassolDanielaCV.pdf
