--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://pesati.io
+url: https://pesati.github.io/
 title: André Pesati Revoredo
 email: pesatirevoredo@gmail.com
 author: André Pesati Revoredo
